<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/sky_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_eliminate_route_title"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blue_middlelight"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/dialog_eliminate_btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialog_eliminate_route_btn_no"
            android:background="@drawable/selector_btn_create_route"
            android:textColor="@color/sky_blue"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/dialog_eliminate_btn_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialog_eliminate_route_btn_yes"
            android:background="@drawable/selector_btn_create_route"
            android:textColor="@color/sky_blue"
            android:layout_marginLeft="10dp" />

    </LinearLayout>


</LinearLayout>