<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/sky_blue_middle">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/fragment_option_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_options_start"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/fragment_option_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_options_list"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/fragment_option_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_options_cancel"
            android:textSize="12sp" />

    </LinearLayout>





</LinearLayout>